# warren

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  PLAN_context_scrape_bug.md  README.md  TODOs.md  WARREN.md  backspace_repro_single.html  compose.dev.yml  compose.yml  rabbit-lib.md  schema.hcl  seq-numbered-snapshot-protocol.md
.github/workflows/: ci-fast.yml  ci-integration.yml  nightly.yml  schema-drift.yml
rabbit/: Cargo.toml  README.md
rabbit-lib/: Cargo.toml  README.md
rabbit-lib-axum/: Cargo.toml
rabbit-lib-axum/examples/: embedder_axum.rs
rabbit-lib-axum/src/: http.rs  lib.rs  ws_bridge.rs
rabbit-lib-axum/tests/: router_smoke.rs
rabbit-lib/examples/: embedder_tokio.rs
rabbit-lib/src/: hooks_install.rs  lib.rs  link.rs  recorder.rs  respawn.rs  shell.rs  supervisor.rs  wire.rs
rabbit-lib/src/observer/: state.rs  transcript.rs
rabbit-lib/src/server/: actor.rs  handle.rs  http.rs  http_api.rs  mod.rs  registry.rs  transport.rs  ws_browser.rs  ws_rabbit.rs  ws_shell.rs
rabbit-lib/tests/: claude_smoke.rs  embedder_agnostic.rs  input_discipline.rs  integration.rs  meta_replay.rs  pty_echo.rs  snapshot_roundtrip.rs  transcript_parse.rs
rabbit-lib/tests/common/: mod.rs
rabbit/examples/: parse_capture.rs
rabbit/src/: config.rs  dispatch.rs  health.rs  hooks_install.rs  http_server.rs  input.rs  lib.rs  link.rs  main.rs  meta_ring.rs  pty.rs  pty_writer.rs  respawn.rs  shell.rs  supervisor.rs  trust.rs  vt.rs  wire.rs
rabbit/src/observer/: context.rs  hooks.rs  limits.rs  mod.rs  state.rs  transcript.rs
rabbit/src/observer/text/: ansi.rs  mod.rs
rabbit/tests/: claude_smoke.rs  input_discipline.rs  integration.rs  meta_replay.rs  pty_echo.rs  snapshot_roundtrip.rs  transcript_parse.rs
rabbit/tests/common/: mod.rs
scripts/: port_forward.py
warren/: Cargo.toml  build.rs  openapi.yml
warren-cli/: Cargo.toml
warren-cli/src/: main.rs
warren/migrations/: m20260101_000001_init.sql  m20260128_000002_agent_prompt.sql
warren/migrations_atlas/: 20260628150838_init.sql  20260628154001_init.sql  20260629032112_init.sql  20260629034416_init.sql  20260629064124_channels.sql  20260629165624_acknowledged.sql  20260629204010_payload_to_text.sql  20260630052634_add_acknowledged_by.sql  20260701065747_add_channel_approval_flags.sql  20260703200602_agent_events.sql  20260711113055_scheduled_prompts.sql  20260711164500_scheduled_prompts_class_kind.sql  20260711170000_scheduled_prompts_safety_buffer_int.sql  20260711170001_align_with_entities.sql  20260713183604_add_usage_context_pct.sql  20260713191055_add_context_clear_threshold.sql  20260715052312_add_channel_enabled.sql  20260716200823_add_agent_forgejo_configs.sql  20260717222954_scheduled_prompts_scope_and_agent.sql  20260717224756_scheduled_prompts_scope_and_agent.sql  20260717225808_enable_default_fix.sql  20260718055759_switch_threshold_to_tokens.sql  20260718113101_unassigned_with_label_filter.sql  atlas.sum
warren/src/: auth.rs  config.rs  db.rs  db_ops.rs  error.rs  forgejo.rs  ids.rs  main.rs  migrate.rs  models.rs  rabbit_adapter.rs  templates.rs
warren/src/agents_live/: actor.rs  handle.rs  http.rs  mod.rs  registry.rs  wire.rs  ws_browser.rs  ws_rabbit.rs  ws_shell.rs
warren/src/entity/: admin_session.rs  agent.rs  agent_event.rs  agent_forgejo_config.rs  channel.rs  memo.rs  mod.rs  request.rs  scheduled_prompt.rs  scheduled_prompt_run.rs
warren/src/migration/: m20260101_000001_init.rs  m20260128_000002_agent_prompt.rs  mod.rs
warren/src/routes/: api.rs  docs.rs  mod.rs  openapi.rs  recording.rs  static_files.rs  ui.rs
warren/src/scheduler/: mod.rs
warren/templates/: agent_claude.html  agent_claude_history_list.html  agent_claude_history_play.html  agent_form.html  agent_shell.html  agents.html  base.html  channel_form.html  channels.html  comms.html  comms_edit.html  comms_inject.html  login.html  message_edit.html  message_inject.html  messages.html  migrations.html  scheduled_prompt_edit.html  scheduled_prompt_form.html  scheduled_prompt_new.html  scheduled_prompts.html
warren/tests/: openapi_drift.rs  schema_drift.rs  schema_drift_populated.rs
