[workspace]
resolver = "2"
members = ["warren", "warren-cli"]

[workspace.package]
edition = "2021"
rust-version = "1.85"

[workspace.dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "chrono", "uuid"] }
sea-orm-migration = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "macros"] }
askama = "0.12"
askama_axum = "0.4"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "set-header"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
subtle = "2"
anyhow = "1"
thiserror = "1"
log = "0.4"
simple_logger = "5"
rand = "0.8"
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
ureq = { version = "2", features = ["json"] }