[workspace]
resolver = "2"
members = ["warren", "warren-cli", "rabbit", "rabbit-lib", "rabbit-lib-axum"]

[workspace.package]
edition = "2021"
rust-version = "1.85"

[workspace.dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
dashmap = "6"
bytes = "1"
portable-pty = "0.8"
tokio-tungstenite = { version = "0.24", features = ["connect", "rustls-tls-webpki-roots"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
notify = "6"
futures-util = "0.3"
parking_lot = "0.12"
tokio-stream = "0.1"
sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros", "chrono", "uuid"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "macros"] }
askama = "0.12"
askama_axum = "0.4"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "set-header"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
subtle = "2"
anyhow = "1"
thiserror = "1"
http = "1"
log = "0.4"
simple_logger = "5"
rand = "0.8"
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
ureq = { version = "2", features = ["json"] }
async-trait = "0.1"
async-stream = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
url = "2"
avt = "0.18"
tempfile = "3"