[package]
name = "rabbit-lib-axum"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Axum adapter for rabbit-lib — thin shim that mounts the lib's HTTP routes and WebSocket upgrades on top of an axum::Router."
publish = false

[dependencies]
rabbit-lib = { path = "../rabbit-lib" }
axum = { workspace = true }
tokio = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
async-stream.workspace = true
log = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
http = { workspace = true }
async-trait.workspace = true
serde_json = { workspace = true }
tower = { workspace = true }
axum = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
