[package]
name = "rabbit-lib"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Server-side runtime for the rabbit agent-broker protocol (consumed by warren)"
license = "MIT OR Apache-2.0"
publish = true
repository = "https://github.com/Trolldemorted/warren"
homepage = "https://github.com/Trolldemorted/warren"
readme = "README.md"
keywords = ["claude", "websocket", "agent-broker", "headless"]
categories = ["api-bindings", "asynchronous", "development-tools"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
axum.workspace = true
tokio.workspace = true
async-trait = "0.1"
bytes.workspace = true
chrono.workspace = true
dashmap.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
anyhow.workspace = true
thiserror.workspace = true
log.workspace = true
tokio-stream.workspace = true
async-stream = "0.3"