[package]
name = "rabbit"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

# `rabbit` is the supervisor binary (src/main.rs).
# `rabbit-hook` is auto-discovered by Cargo from src/bin/rabbit-hook.rs.
[[bin]]
name = "rabbit"
path = "src/main.rs"

# `tls` enables the rustls TLS connector on `tokio-tungstenite`, which is
# what makes `https://` and `wss://` URLs work in `WARREN_URL`. Without it,
# `tokio_tungstenite::connect_async` returns "TLS support not compiled in"
# on every attempt and the link task would loop forever on a permanent
# misconfiguration — see `config::validate_warren_url` for the startup
# check that fails fast instead. Default-on because production rabbit
# pods normally reach warren over TLS; strip it when a TLS-terminating
# reverse proxy fronts both services and only `http://` is in use.
[features]
default = ["tls"]
tls = ["tokio-tungstenite/rustls-tls-webpki-roots"]

[dependencies]
axum.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
rustls.workspace = true
portable-pty.workspace = true
futures-util.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
log.workspace = true
simple_logger.workspace = true
bytes.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
avt = "0.18"

[dev-dependencies]
tempfile = "3"
tokio-tungstenite.workspace = true
futures-util.workspace = true
tower = { workspace = true, features = ["util"] }
