[package]
name = "rabbit"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
publish = false
description = "Thin wrapper crate for the `rabbit` and `rabbit-hook` binaries. The actual implementation lives in `rabbit-lib`."

[dependencies]
rabbit-lib = { path = "../rabbit-lib" }
anyhow.workspace = true
