[package]
name = "warren-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "warren-cli"
path = "src/main.rs"

[dependencies]
clap.workspace = true
ureq.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
base64.workspace = true