[package]
name = "warren"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
axum.workspace = true
tokio.workspace = true
sea-orm.workspace = true
sea-orm-migration.workspace = true
sqlx.workspace = true
askama.workspace = true
askama_axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
uuid.workspace = true
chrono.workspace = true
subtle.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rand.workspace = true
base64.workspace = true
clap.workspace = true