[package]
name = "warren"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
rabbit-lib = { path = "../rabbit-lib" }
axum.workspace = true
tokio.workspace = true
sea-orm.workspace = true
sqlx.workspace = true
askama.workspace = true
askama_axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
uuid.workspace = true
chrono.workspace = true
subtle.workspace = true
anyhow.workspace = true
thiserror.workspace = true
log.workspace = true
simple_logger.workspace = true
rand.workspace = true
base64.workspace = true
clap.workspace = true
dashmap.workspace = true
bytes.workspace = true
futures-util.workspace = true
tokio-stream.workspace = true
async-stream = "0.3"
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
url = "2"